--- a/notebooks/SimpliMedi_RAG.ipynb
+++ b/notebooks/SimpliMedi_RAG.ipynb
@@ -1,33 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qMd4owIEt7hy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "qMd4owIEt7hy",
         "outputId": "a9ad3458-b3c9-46d9-fde1-5e6589b52ce2"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: llama-index in /usr/local/lib/python3.10/dist-packages (0.10.6)\n",
             "Requirement already satisfied: llama-index-agent-openai<0.2.0,>=0.1.0 in /usr/local/lib/python3.10/dist-packages (from llama-index) (0.1.1)\n",
@@ -106,6 +92,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ObJyme2Px4p2"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "from google.colab import userdata\n",
@@ -115,103 +106,103 @@
         "    load_index_from_storage,\n",
         "    StorageContext,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "ObJyme2Px4p2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "7dupETSpzjZ9"
+      },
       "source": [
         "### Set Up Api Key\n",
         "- Navigate to the “Secrets” section in the sidebar.\n",
         "- Click on “Add a new secret.”\n",
         "- Enter the name and value of the secret. name=OPENAI_API_KEY, value=<api_key>\n"
-      ],
-      "metadata": {
-        "id": "7dupETSpzjZ9"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SsMo0-iXzQJd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OPENAI_API_KEY')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Load Data"
-      ],
       "metadata": {
         "id": "JxXFmflMylud"
-      }
+      },
+      "source": [
+        "### Load Data"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Load Data Files"
-      ],
       "metadata": {
         "id": "76x5H10vywdv"
-      }
+      },
+      "source": [
+        "### Load Data Files"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "reBo-pB32TFP"
+      },
+      "outputs": [],
       "source": [
         "filename_fn = lambda filename: {\"file_name\": filename}\n",
         "# automatically sets the metadata of each document according to filename_fn\n",
         "documents = SimpleDirectoryReader(\n",
         "    input_files=[\"./data/01.pdf\",\"./data/02.pdf\",\"./data/03.pdf\",\"./data/04.pdf\",\"./data/05.pdf\"], file_metadata=filename_fn\n",
         ").load_data()"
-      ],
-      "metadata": {
-        "id": "reBo-pB32TFP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(f\"Loaded {len(documents)} docs\")"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "8wT4kHDuy0wO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "8wT4kHDuy0wO",
         "outputId": "a24245df-b023-4e21-b907-2b4895fd9905"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Loaded 91 docs\n"
           ]
         }
+      ],
+      "source": [
+        "print(f\"Loaded {len(documents)} docs\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Save Indexing"
-      ],
       "metadata": {
         "id": "qtZKIntc3oD1"
-      }
+      },
+      "source": [
+        "### Save Indexing"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KZJlc9vf3kLV"
+      },
+      "outputs": [],
       "source": [
         "# check if storage already exists\n",
         "PERSIST_DIR = \"./storage\"\n",
@@ -224,33 +215,33 @@
         "  storage_context = StorageContext.from_defaults(persist_dir=\"storage\")\n",
         "  # load index\n",
         "  index = load_index_from_storage(index_id=\"vector_index\", storage_context=storage_context)"
-      ],
-      "metadata": {
-        "id": "KZJlc9vf3kLV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IOwo6t8KSWZR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Retrieval"
-      ],
       "metadata": {
         "id": "6WVg_RVk48GM"
-      }
+      },
+      "source": [
+        "### Retrieval"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "xUzWFBC_eOPi"
+      },
+      "outputs": [],
       "source": [
         "# import openai\n",
         "# !openai migrate\n",
@@ -269,26 +260,26 @@
         "#     reply = chat.choices[0].message.content\n",
         "#     print(f\"ChatGPT: {reply}\")\n",
         "#     messages.append({\"role\": \"assistant\", \"content\": reply})"
-      ],
-      "metadata": {
-        "id": "xUzWFBC_eOPi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "query_engine = index.as_query_engine(response_mode=\"tree_summarize\", similarity_top_k=5)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "niiFQtE144G9"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "query_engine = index.as_query_engine(response_mode=\"tree_summarize\", similarity_top_k=5)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-BSzt3L45BLV"
+      },
+      "outputs": [],
       "source": [
         "response = query_engine.query(\"\"\" Explain in 5000 words like a doctor explaining to patient. Add more details based on general medical knowledge.\n",
         "\n",
@@ -348,62 +339,52 @@
         "Postsurgical and multilevel degenerative spondylotic changes of the lumbar spine with up to severe spinal\n",
         "canal and severe neuroforaminal stenosis, further discussed in level by level detail above.\n",
         "\"\"\")"
-      ],
-      "metadata": {
-        "id": "-BSzt3L45BLV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "response.response"
-      ],
-      "metadata": {
-        "id": "eKyH0Ncx5g2s",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 191
-        },
-        "outputId": "a1e79bd4-743a-40a0-ef38-660212e1bb6a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'The MRI of your lumbar spine shows several findings. Firstly, the lumbar vertebrae are normal in their alignment and segmentation, with the sacrum fully incorporated into the S1 vertebra. There are postsurgical changes noted at the L2-L4 levels, where laminectomies were performed with posterior instrumented fusion at L2-L5. However, the evaluation of adjacent structures is limited due to artifact related to the fusion hardware.\\n\\nIn terms of the vertebral bodies, there is a chronic-appearing mild anterior wedging of the T12 vertebral body, but overall the vertebral body heights are maintained with no suspicious marrow signal replacement. The alignment of the spine shows no acute subluxation, but there is a mild dextrocurvature present. Additionally, there is stepwise grade 1 retrolisthesis of L1 on L2 and L2 on L3.\\n\\nMoving on to the specific levels of the lumbar spine:\\n- At the T12-L1 level, there is no spinal canal stenosis, but there is mild bilateral neuroforaminal stenosis due to disc bulge and facet arthropathy.\\n- At the L1-L2 level, there is severe spinal canal stenosis due to disc bulge, facet arthropathy, and ligamentum flavum redundancy, with moderate to severe neuroforaminal stenosis on the right and left sides.\\n- At the L2-L3 level, there is no spinal canal stenosis, but mild bilateral neuroforaminal stenosis is present.\\n- At the L3-L4 level, there is no spinal canal stenosis, with mild right and moderate left neuroforaminal stenosis.\\n- At the L4-L5 level, there is no spinal canal stenosis, with mild right and moderate left neuroforaminal stenosis.\\n- At the L5-S1 level, there is no spinal canal stenosis, but there is moderate right and severe left neuroforaminal stenosis.\\n\\nThe examination also notes unremarkable paraspinal soft tissues, except for a simple right renal cyst measuring 6.7 x 5.8 cm.\\n\\nIn summary, the MRI findings indicate postsurgical changes and multilevel degenerative spondylotic changes in your lumbar spine, with varying degrees of spinal canal and neuroforaminal stenosis at different levels. These findings may contribute to your low back pain, and further discussion with your healthcare provider regarding management options would be beneficial.'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#explore which nodes were selected for the answer\n",
-        "for node_with_score in response.source_nodes:\n",
-        "    print(node_with_score.node)"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "2r-NOSOb73YN",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
+        },
+        "id": "eKyH0Ncx5g2s",
+        "outputId": "a1e79bd4-743a-40a0-ef38-660212e1bb6a"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'The MRI of your lumbar spine shows several findings. Firstly, the lumbar vertebrae are normal in their alignment and segmentation, with the sacrum fully incorporated into the S1 vertebra. There are postsurgical changes noted at the L2-L4 levels, where laminectomies were performed with posterior instrumented fusion at L2-L5. However, the evaluation of adjacent structures is limited due to artifact related to the fusion hardware.\\n\\nIn terms of the vertebral bodies, there is a chronic-appearing mild anterior wedging of the T12 vertebral body, but overall the vertebral body heights are maintained with no suspicious marrow signal replacement. The alignment of the spine shows no acute subluxation, but there is a mild dextrocurvature present. Additionally, there is stepwise grade 1 retrolisthesis of L1 on L2 and L2 on L3.\\n\\nMoving on to the specific levels of the lumbar spine:\\n- At the T12-L1 level, there is no spinal canal stenosis, but there is mild bilateral neuroforaminal stenosis due to disc bulge and facet arthropathy.\\n- At the L1-L2 level, there is severe spinal canal stenosis due to disc bulge, facet arthropathy, and ligamentum flavum redundancy, with moderate to severe neuroforaminal stenosis on the right and left sides.\\n- At the L2-L3 level, there is no spinal canal stenosis, but mild bilateral neuroforaminal stenosis is present.\\n- At the L3-L4 level, there is no spinal canal stenosis, with mild right and moderate left neuroforaminal stenosis.\\n- At the L4-L5 level, there is no spinal canal stenosis, with mild right and moderate left neuroforaminal stenosis.\\n- At the L5-S1 level, there is no spinal canal stenosis, but there is moderate right and severe left neuroforaminal stenosis.\\n\\nThe examination also notes unremarkable paraspinal soft tissues, except for a simple right renal cyst measuring 6.7 x 5.8 cm.\\n\\nIn summary, the MRI findings indicate postsurgical changes and multilevel degenerative spondylotic changes in your lumbar spine, with varying degrees of spinal canal and neuroforaminal stenosis at different levels. These findings may contribute to your low back pain, and further discussion with your healthcare provider regarding management options would be beneficial.'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "response.response"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "2r-NOSOb73YN",
         "outputId": "aec22857-65c4-421e-9cf9-e58726b7a8c8"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Node ID: 685c27c8-3041-4c7c-b2e6-2cc98404fd63\n",
             "Text: noninfectious inﬂammatory processes. MRI is the test of choice,\n",
@@ -442,22 +423,30 @@
             "an...\n"
           ]
         }
+      ],
+      "source": [
+        "#explore which nodes were selected for the answer\n",
+        "for node_with_score in response.source_nodes:\n",
+        "    print(node_with_score.node)"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "284FZDfv9IA9"
+      },
       "source": [
         "## To Do\n",
         "- Actual Data Ingestion\n",
         "- Evaluate baseline\n",
         "- Improve Perf"
-      ],
-      "metadata": {
-        "id": "284FZDfv9IA9"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hoLXnsDXT4Fm"
+      },
       "source": [
         "EXAM: MR LUMBAR SPINE WITH AND WITHOUT CONTRAST\n",
         "\n",
@@ -514,10 +503,22 @@
         "\n",
         "Postsurgical and multilevel degenerative spondylotic changes of the lumbar spine with up to severe spinal\n",
         "canal and severe neuroforaminal stenosis, further discussed in level by level detail above."
-      ],
-      "metadata": {
-        "id": "hoLXnsDXT4Fm"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.11.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
